# LIII

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CTestConfig.cmake  README.md  isvndashboard  isvndashboard_mac  setup.iss
.github/workflows/: ci_windows.yaml
cmake/: FindOpenSSL.cmake  FindTorrentRasterbar.cmake  VersionConf.cmake  additionalOptions.cmake  doxigenHelper.cmake  doxygenHelper.cmake  install-translations.cmake  integrate-boost.cmake  integrate-qt.cmake  machelper.cmake  projecthelper.cmake  testing.cmake
docs/: Doxyfile.in
imports/OpenSSL/: version.txt
imports/OpenSSL/ssl/misc/: CA.pl  tsget.pl
imports/OpenSSL/x64/include/openssl/: bio.h  cmp.h  configuration.h  ocsp.h  opensslconf.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h
imports/OpenSSL/x64/lib/: libcrypto.lib  libeay32.lib  libssl.lib  ssleay32.lib
imports/OpenSSL/x86-vc10/include/openssl/: opensslconf.h
imports/OpenSSL/x86-vc10/lib/: libeay32.lib  ssleay32.lib
imports/OpenSSL/x86/include/openssl/: asn1.h  asn1t.h  cms.h  conf.h  configuration.h  crmf.h  crypto.h  ct.h  ess.h  fipskey.h  opensslconf.h  ssl.h  ui.h  x509.h  x509_vfy.h  x509v3.h
imports/OpenSSL/x86/lib/: libcrypto.lib  libeay32.lib  libssl.lib  ssleay32.lib
resources/: LIII.desktop.in  defaultstyle.css  resources.qrc.in  winres.rc.in
resources/LIII/: resources-LIII.qrc  style.css
resources/MacOSXResources/: app-Info.plist
resources/MacOSXResources/qt_menu.nib/: designable.nib  keyedobjects.nib
src/: CMakeLists.txt  README
src/common/darwin/: AppDelegate.h  AppDelegate.mm  AppHandler.h  AppHandler.mm  CMakeLists.txt  DarwinSingleton.cpp  DarwinSingleton.h  NS2QtImpl.h
src/common/darwin/media/: multimedia.h  multimedia.mm
src/common/download/: CMakeLists.txt  downloader.h  downloader_traits.h
src/common/download/detail/: downloader_base.h  downloader_signal_catchers.cpp  downloader_signal_catchers.h
src/common/modules-tests/: AutoTest.h
src/common/modules-tests/download/: downloadtestcommon.h  tcpclient.h  tcpserver.h  test-Download.cpp  test-Download.h
src/common/modules-tests/resources_test/: test-resources.cpp  test-resources.h
src/common/modules-tests/ui_utils/: test-mainwindowwithtray.cpp  test-mainwindowwithtray.h
src/common/modules-tests/utilities/: test-AuthenticationHelper.cpp  test-AuthenticationHelper.h  test-Translation.cpp  test-Translation.h  test-Utils.cpp  test-Utils.h
src/common/traffic_limitation/: CMakeLists.txt  InterceptTimer.cpp  InterceptTimer.h  InterceptingApplication.h  NetworkReplyAdaptor.cpp  NetworkReplyAdaptor.h  QConnectionObjectEx.h  TrafficControl.cpp  TrafficControl.h
src/common/ui_utils/: CMakeLists.txt  getstyleoptionprogressbar.cpp  getstyleoptionprogressbar.h  mainwindowwithtray.cpp  mainwindowwithtray.h  set_dark_theme.cpp  set_dark_theme.h  tabbeddialogcombo.cpp  tabbeddialogcombo.h  taskbar.cpp  taskbar.h
src/common/utilities/: CMakeLists.txt  associate_app.h  associate_app_linux.cpp  associate_app_mac.cpp  associate_app_win.cpp  authentication_helper.cpp  authentication_helper.h  autorun_utils.cpp  autorun_utils.h  credential.h  credsretriever.cpp  credsretriever.h  customutf8codec.cpp  customutf8codec.h  errorcode.cpp  errorcode.h  filesaveguard.h  filesystem_utils.cpp  filesystem_utils.h  instantiator.h  iparentadvice.h  logger.cpp  logger.h  modeldeserializer.cpp  modeldeserializer.h  modelserializecommon.cpp  modelserializecommon.h  modelserializer.cpp  modelserializer.h  notify_helper.h  patricia.h  qttranslation.h  simplecrypt.h  singleton.h  translatable.cpp  translatable.h  translation.cpp  translation.h  utils.cpp  utils.h  (+2 more)
src/gui/: LIIIstyle.cpp  LIIIstyle.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  add_links.cpp  add_links.h  add_links.ui  add_links_widget.cpp  add_links_widget.h  addtorrentform.cpp  addtorrentform.h  addtorrentform.ui  buttonlabel.cpp  buttonlabel.h  downloadcollectiondelegate.cpp  downloadcollectiondelegate.h  elidedlabel.cpp  elidedlabel.h  lineeditex.cpp  lineeditex.h  logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  peersinfoform_proxy_model.cpp  peersinfoform_proxy_model.h  preferences.cpp  preferences.h  preferences.ui  proplistdelegate.cpp  proplistdelegate.h  torrentdetailsform.cpp  torrentdetailsform.h  torrentdetailsform.ui
src/logic/: commandlineparser.cpp  commandlineparser.h  configurableproxyfactory.cpp  configurableproxyfactory.h  downloadcollectionmodel.cpp  downloadcollectionmodel.h  downloadcollectiontreeview.cpp  downloadcollectiontreeview.h  downloadmanager.cpp  downloadmanager.h  downloadtask.cpp  downloadtask.h  downloadtype.cpp  downloadtype.h  peersinfomodel.cpp  peersinfomodel.h  torrentcontentfiltermodel.cpp  torrentcontentfiltermodel.h  torrentcontentmodel.cpp  torrentcontentmodel.h  torrentcontentmodelitem.cpp  torrentcontentmodelitem.h  torrentdetailscontentview.cpp  torrentdetailscontentview.h  torrentmanager.cpp  torrentmanager.h  torrentslistener.cpp  torrentslistener.h  treeitem.cpp  treeitem.h
src/main/: application.cpp  application.h  global_functions.cpp  global_functions.h  globals.h  main.cpp  settings_declaration.h
translations/: LIII_en.ts  Language.pt-BR.ts  translations_bg-bg.ts  translations_cn-simple.ts  translations_en.ts  translations_es-cl.ts  translations_ko-kr.ts  translations_pt-br.ts  translations_ru-ru.ts  translations_zh-cn.ts  translations_zh-tw.ts
